# compressonator-py

./: .gitignore  Manifest.in  README.md  pyproject.toml  setup.py
.github/workflows/: doc.yml  release.yml
compressonator_py/: __init__.py  _compressonator.pyi  enums.py  options.py  texture.py
compressonator_pyc/: CMP_CompressOptions.hpp  CMP_Texture.cpp  CMP_Texture.hpp  core_simd_stub.cpp  pybind.cpp  pyhelper.hpp
tests/: test_main.py
