[build-system]
requires = ["setuptools>=70, <=80"]
build-backend = "setuptools.build_meta"

[project]
name = "compressonator-py"
description = "compressonator bindings"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Rudolf Kolbe", email = "rkolbe96@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/K0lb3/compresstonator-py"
"Bug Tracker" = "https://github.com/K0lb3/compresstonator-py/issues"

[tool.setuptools.dynamic]
version = { attr = "compressonator_py.__version__" }

[project.optional-dependencies]
tests = [
    "pytest >= 8.3.3",
    "pillow >=10.4.0",
    "imagehash >=4.3.1",
    "psutil >= 6.0.0",
]

[tool.cibuildwheel]
build = "cp38-* cp39-* cp310-* cp311-* pp3*"
enable = ["pypy", "pypy-eol"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "i686", "aarch64", "ppc64le", "s390x", "armv7l"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86", "ARM64"]
skip = ["cp38-win_arm64"]
